--- a/index.html
+++ b/index.html
@@ -7525,6 +7525,133 @@
             },
           },
         },
+        lamentarsi: {
+          translation: "to complain",
+          regular: "regular",
+          auxiliary: "essere",
+          difficulty: "beginner",
+          conjugations: {
+            presente: {
+              io: "mi lamento",
+              tu: "ti lamenti",
+              lui: "si lamenta",
+              noi: "ci lamentiamo",
+              voi: "vi lamentate",
+              loro: "si lamentano",
+            },
+            imperfetto: {
+              io: "mi lamentavo",
+              tu: "ti lamentavi",
+              lui: "si lamentava",
+              noi: "ci lamentavamo",
+              voi: "vi lamentavate",
+              loro: "si lamentavano",
+            },
+            passato_prossimo: {
+              io: "mi sono lamentato/a",
+              tu: "ti sei lamentato/a",
+              lui: "si è lamentato/a",
+              noi: "ci siamo lamentati/e",
+              voi: "vi siete lamentati/e",
+              loro: "si sono lamentati/e",
+            },
+            passato_remoto: {
+              io: "mi lamentai",
+              tu: "ti lamentasti",
+              lui: "si lamentò",
+              noi: "ci lamentammo",
+              voi: "vi lamentaste",
+              loro: "si lamentarono",
+            },
+            trapassato_prossimo: {
+              io: "mi ero lamentato/a",
+              tu: "ti eri lamentato/a",
+              lui: "si era lamentato/a",
+              noi: "ci eravamo lamentati/e",
+              voi: "vi eravate lamentati/e",
+              loro: "si erano lamentati/e",
+            },
+            trapassato_remoto: {
+              io: "mi fui lamentato/a",
+              tu: "ti fosti lamentato/a",
+              lui: "si fu lamentato/a",
+              noi: "ci fummo lamentati/e",
+              voi: "vi foste lamentati/e",
+              loro: "si furono lamentati/e",
+            },
+            futuro_semplice: {
+              io: "mi lamenterò",
+              tu: "ti lamenterai",
+              lui: "si lamenterà",
+              noi: "ci lamenteremo",
+              voi: "vi lamenterete",
+              loro: "si lamenteranno",
+            },
+            futuro_anteriore: {
+              io: "mi sarò lamentato/a",
+              tu: "ti sarai lamentato/a",
+              lui: "si sarà lamentato/a",
+              noi: "ci saremo lamentati/e",
+              voi: "vi sarete lamentati/e",
+              loro: "si saranno lamentati/e",
+            },
+            condizionale_presente: {
+              io: "mi lamenterei",
+              tu: "ti lamenteresti",
+              lui: "si lamenterebbe",
+              noi: "ci lamenteremmo",
+              voi: "vi lamentereste",
+              loro: "si lamenterebbero",
+            },
+            condizionale_passato: {
+              io: "mi sarei lamentato/a",
+              tu: "ti saresti lamentato/a",
+              lui: "si sarebbe lamentato/a",
+              noi: "ci saremmo lamentati/e",
+              voi: "vi sareste lamentati/e",
+              loro: "si sarebbero lamentati/e",
+            },
+            congiuntivo_presente: {
+              io: "mi lamenti",
+              tu: "ti lamenti",
+              lui: "si lamenti",
+              noi: "ci lamentiamo",
+              voi: "vi lamentiate",
+              loro: "si lamentino",
+            },
+            congiuntivo_passato: {
+              io: "mi sia lamentato/a",
+              tu: "ti sia lamentato/a",
+              lui: "si sia lamentato/a",
+              noi: "ci siamo lamentati/e",
+              voi: "vi siate lamentati/e",
+              loro: "si siano lamentati/e",
+            },
+            congiuntivo_imperfetto: {
+              io: "mi lamentassi",
+              tu: "ti lamentassi",
+              lui: "si lamentasse",
+              noi: "ci lamentassimo",
+              voi: "vi lamentaste",
+              loro: "si lamentassero",
+            },
+            congiuntivo_trapassato: {
+              io: "mi fossi lamentato/a",
+              tu: "ti fossi lamentato/a",
+              lui: "si fosse lamentato/a",
+              noi: "ci fossimo lamentati/e",
+              voi: "vi foste lamentati/e",
+              loro: "si fossero lamentati/e",
+            },
+            imperativo_presente: {
+              tu: "lamentati",
+              lui: "si lamenti",
+              noi: "lamentiamoci",
+              voi: "lamentatevi",
+              loro: "si lamentino",
+            },
+          },
+        },
 
         // MOSTLY REGULAR VERBS
 
@@ -14385,6 +14512,133 @@
               noi: "sappiamo",
               voi: "sappiate",
               loro: "sappiano",
+            },
+          },
+        },
+        accorgersi: {
+          translation: "to notice/realize",
+          regular: "irregular",
+          auxiliary: "essere",
+          difficulty: "intermediate",
+          conjugations: {
+            presente: {
+              io: "mi accorgo",
+              tu: "ti accorgi",
+              lui: "si accorge",
+              noi: "ci accorgiamo",
+              voi: "vi accorgete",
+              loro: "si accorgono",
+            },
+            imperfetto: {
+              io: "mi accorgevo",
+              tu: "ti accorgevi",
+              lui: "si accorgeva",
+              noi: "ci accorgevamo",
+              voi: "vi accorgevate",
+              loro: "si accorgevano",
+            },
+            passato_prossimo: {
+              io: "mi sono accorto/a",
+              tu: "ti sei accorto/a",
+              lui: "si è accorto/a",
+              noi: "ci siamo accorti/e",
+              voi: "vi siete accorti/e",
+              loro: "si sono accorti/e",
+            },
+            passato_remoto: {
+              io: "mi accorsi",
+              tu: "ti accorgesti",
+              lui: "si accorse",
+              noi: "ci accorgemmo",
+              voi: "vi accorgeste",
+              loro: "si accorsero",
+            },
+            trapassato_prossimo: {
+              io: "mi ero accorto/a",
+              tu: "ti eri accorto/a",
+              lui: "si era accorto/a",
+              noi: "ci eravamo accorti/e",
+              voi: "vi eravate accorti/e",
+              loro: "si erano accorti/e",
+            },
+            trapassato_remoto: {
+              io: "mi fui accorto/a",
+              tu: "ti fosti accorto/a",
+              lui: "si fu accorto/a",
+              noi: "ci fummo accorti/e",
+              voi: "vi foste accorti/e",
+              loro: "si furono accorti/e",
+            },
+            futuro_semplice: {
+              io: "mi accorgerò",
+              tu: "ti accorgerai",
+              lui: "si accorgerà",
+              noi: "ci accorgeremo",
+              voi: "vi accorgerete",
+              loro: "si accorgeranno",
+            },
+            futuro_anteriore: {
+              io: "mi sarò accorto/a",
+              tu: "ti sarai accorto/a",
+              lui: "si sarà accorto/a",
+              noi: "ci saremo accorti/e",
+              voi: "vi sarete accorti/e",
+              loro: "si saranno accorti/e",
+            },
+            condizionale_presente: {
+              io: "mi accorgerei",
+              tu: "ti accorgeresti",
+              lui: "si accorgerebbe",
+              noi: "ci accorgeremmo",
+              voi: "vi accorgereste",
+              loro: "si accorgerebbero",
+            },
+            condizionale_passato: {
+              io: "mi sarei accorto/a",
+              tu: "ti saresti accorto/a",
+              lui: "si sarebbe accorto/a",
+              noi: "ci saremmo accorti/e",
+              voi: "vi sareste accorti/e",
+              loro: "si sarebbero accorti/e",
+            },
+            congiuntivo_presente: {
+              io: "mi accorga",
+              tu: "ti accorga",
+              lui: "si accorga",
+              noi: "ci accorgiamo",
+              voi: "vi accorgiate",
+              loro: "si accorgano",
+            },
+            congiuntivo_passato: {
+              io: "mi sia accorto/a",
+              tu: "ti sia accorto/a",
+              lui: "si sia accorto/a",
+              noi: "ci siamo accorti/e",
+              voi: "vi siate accorti/e",
+              loro: "si siano accorti/e",
+            },
+            congiuntivo_imperfetto: {
+              io: "mi accorgessi",
+              tu: "ti accorgessi",
+              lui: "si accorgesse",
+              noi: "ci accorgessimo",
+              voi: "vi accorgeste",
+              loro: "si accorgessero",
+            },
+            congiuntivo_trapassato: {
+              io: "mi fossi accorto/a",
+              tu: "ti fossi accorto/a",
+              lui: "si fosse accorto/a",
+              noi: "ci fossimo accorti/e",
+              voi: "vi foste accorti/e",
+              loro: "si fossero accorti/e",
+            },
+            imperativo_presente: {
+              tu: "accorgiti",
+              lui: "si accorga",
+              noi: "accorgiamoci",
+              voi: "accorgetevi",
+              loro: "si accorgano",
             },
           },
         },
